Move css and js libs to libs directory. Remove not used libs

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -997,11 +997,6 @@
     <Content Include="Content\banner-campus-2019.png" />
     <Content Include="Content\banner-campus.png" />
     <Content Include="Content\banner-summer-practice.jpg" />
-    <Content Include="Content\bootstrap-select.min.css" />
-    <Content Include="Content\bootstrap-theme.css" />
-    <Content Include="Content\bootstrap-theme.min.css" />
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\bootstrap.refresh-animate.css" />
     <Content Include="Content\bootstrap.ulearn.css" />
     <Content Include="Content\bounce.css" />
@@ -1012,11 +1007,16 @@
     <Content Include="Content\course_statistics.css" />
     <Content Include="Content\course_versions.css" />
     <Content Include="Content\exercise\student-submissions.css" />
-    <Content Include="Content\font-awesome.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
-    <Content Include="Content\jquery-ui.min.css" />
-    <Content Include="Content\jquery.datetimepicker.min.css" />
-    <Content Include="Content\likely.css" />
+    <Content Include="Content\libs\bootstrap-select.min.css" />
+    <Content Include="Content\libs\bootstrap.min.css" />
+    <Content Include="Content\libs\bootstrap.min.css.map">
+      <DependentUpon>bootstrap.min.css</DependentUpon>
+    </Content>
+    <Content Include="Content\libs\font-awesome.css" />
+    <Content Include="Content\libs\jquery-ui.min.css" />
+    <Content Include="Content\libs\jquery.datetimepicker.min.css" />
+    <Content Include="Content\libs\likely.css" />
     <Content Include="Content\loading-ring.gif" />
     <Content Include="Content\loading.gif" />
     <Content Include="Content\login_and_registration.css" />
@@ -1051,9 +1051,6 @@
     <Content Include="Scripts\analytics-highcharts.js" />
     <Content Include="Scripts\analytics.js" />
     <Content Include="Scripts\antiplagiarism.js" />
-    <Content Include="Scripts\bootstrap-select.additional.js" />
-    <Content Include="Scripts\bootstrap-select.min.js" />
-    <Content Include="Scripts\bootstrap.file-input.js" />
     <Content Include="qunit\qunit-1.15.0.css" />
     <Content Include="qunit\qunit-1.15.0.js" />
     <Content Include="codemirror\README.md" />
@@ -1063,10 +1060,6 @@
     <Content Include="Content\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\fonts\FontAwesome.otf" />
     <Content Include="Content\certificate-template.zip" />
-    <Content Include="Content\bootstrap.min.css.map" />
-    <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Content\bootstrap-theme.min.css.map" />
-    <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="encoding.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -1086,10 +1079,8 @@
     <None Include="Properties\PublishProfiles\ulearn-dev.pubxml" />
     <None Include="Properties\PublishProfiles\ulearn.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
-    <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\buttons.js" />
     <Content Include="Scripts\certificates-editor.js" />
-    <Content Include="Scripts\clipboard.min.js" />
     <Content Include="Scripts\connect-checkboxes.js" />
     <Content Include="Scripts\course-statistics.js" />
     <Content Include="Scripts\diagnostics.js" />
@@ -1097,34 +1088,42 @@
     <Content Include="Scripts\forms.replace-action.js" />
     <Content Include="Scripts\grader.js" />
     <Content Include="Scripts\groups-editor.js" />
-    <None Include="Scripts\jquery-3.1.1.intellisense.js" />
-    <Content Include="Scripts\jquery-3.1.1.js" />
-    <Content Include="Scripts\jquery-3.1.1.slim.js" />
-    <Content Include="Scripts\jquery-ui.min.js" />
-    <Content Include="Scripts\jquery.color-2.1.0.min.js" />
-    <Content Include="Scripts\jquery.datetimepicker.full.min.js" />
-    <Content Include="Scripts\jquery.datetimepicker.unobtrusive.js" />
-    <Content Include="Scripts\jquery.event.move.js" />
-    <Content Include="Scripts\jquery.query-object.js" />
-    <Content Include="Scripts\jquery.smooth-scrolling.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
-    <Content Include="Scripts\jquery.validate.date.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\js.cookie.js" />
-    <Content Include="Scripts\likely.js" />
-    <Content Include="Scripts\likely.README.txt" />
+    <Content Include="Scripts\libs\bootstrap-select.additional.js" />
+    <Content Include="Scripts\libs\bootstrap-select.min.js" />
+    <Content Include="Scripts\libs\bootstrap.file-input.js" />
+    <Content Include="Scripts\libs\bootstrap.js" />
+    <Content Include="Scripts\libs\clipboard.min.js" />
+    <Content Include="Scripts\libs\jquery-3.1.1.intellisense.js" />
+    <Content Include="Scripts\libs\jquery-3.1.1.js" />
+    <Content Include="Scripts\libs\jquery-3.1.1.slim.js" />
+    <Content Include="Scripts\libs\jquery-ui.js" />
+    <Content Include="Scripts\libs\jquery-ui.min.js" />
+    <Content Include="Scripts\libs\jquery.color-2.1.0.min.js" />
+    <Content Include="Scripts\libs\jquery.datetimepicker.full.min.js" />
+    <Content Include="Scripts\libs\jquery.datetimepicker.unobtrusive.js" />
+    <Content Include="Scripts\libs\jquery.event.move.js" />
+    <Content Include="Scripts\libs\jquery.query-object.js" />
+    <Content Include="Scripts\libs\jquery.smooth-scrolling.js" />
+    <Content Include="Scripts\libs\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\libs\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\libs\jquery.validate.date.js" />
+    <Content Include="Scripts\libs\jquery.validate.js" />
+    <Content Include="Scripts\libs\jquery.validate.unobtrusive.js" />
+    <Content Include="Scripts\libs\js.cookie.js" />
+    <Content Include="Scripts\libs\likely.js" />
+    <Content Include="Scripts\libs\likely.README.txt">
+      <DependentUpon>likely.js</DependentUpon>
+    </Content>
+    <Content Include="Scripts\libs\modernizr-2.8.3.js" />
+    <Content Include="Scripts\libs\notify-custom.min.js" />
+    <Content Include="Scripts\libs\respond.matchmedia.addListener.js" />
+    <Content Include="Scripts\libs\table-configurator.js" />
     <Content Include="Scripts\modals.js" />
-    <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\notifications-settings.js" />
     <Content Include="Scripts\notifications.js" />
-    <Content Include="Scripts\notify-custom.min.js" />
     <Content Include="Scripts\profile.js" />
     <Content Include="Scripts\react-renderer.js" />
     <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.matchmedia.addListener.js" />
-    <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\slide-checking.js" />
     <Content Include="Scripts\slide-comments.js" />
     <Content Include="Scripts\slide-diff.js" />
@@ -1147,12 +1146,10 @@
     <Content Include="Scripts\slide-video.js" />
     <Content Include="Scripts\stepik.js" />
     <Content Include="Scripts\style-errors-settings.js" />
-    <Content Include="Scripts\table-configurator.js" />
     <Content Include="Scripts\tooltips.js" />
     <Content Include="Scripts\suggest-mail-notifications.js" />
     <Content Include="Scripts\email-is-not-confirmed.js" />
     <Content Include="Scripts\users-list.js" />
-    <Content Include="Scripts\_references.js" />
     <Content Include="tablesorter-master\.gitattributes" />
     <Content Include="tablesorter-master\.gitignore" />
     <Content Include="tablesorter-master\addons\pager\icons\first.png" />
