Some logs levels in app.config

--- a/src/Notifications/App.config
+++ b/src/Notifications/App.config
@@ -31,7 +31,7 @@
 	</startup>
 	<log4net>
 		<root>
-			<level value="DEBUG" />
+			<level value="INFO" />
 			<appender-ref ref="FileAppender" />
 			<appender-ref ref="ConsoleAppender" />
 			<appender-ref ref="TelegramAppender" />
