--- a/src/RunCsJob/App.config
+++ b/src/RunCsJob/App.config
@@ -11,7 +11,7 @@
 	</startup>
 	<log4net>
 		<root>
-			<level value="DEBUG" />
+			<level value="INFO" />
 			<appender-ref ref="FileAppender" />
 			<appender-ref ref="ConsoleAppender" />
 		</root>
