--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -8,7 +8,8 @@
     "hostLog": {
         "console": true,
         "pathFormat": "logs/log-{Date}.log",
-        "minimumLevel": "debug"
+        "minimumLevel": "debug",
+        "dbMinimumLevel": "warning"
     },
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True",
     "graphiteServiceName": "antiplagiarism",
