Add nltk to ml-sandbox

--- a/sandboxes/ml-sandbox/container/Dockerfile
+++ b/sandboxes/ml-sandbox/container/Dockerfile
@@ -3,6 +3,8 @@ FROM jupyter/datascience-notebook
 USER root
 RUN mkdir /app && chown jovyan /app
 
+RUN pip install --upgrade pip && pip install nltk
+
 USER jovyan
 
 WORKDIR app
