--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -22,8 +22,8 @@
         }
     },
     "graphiteServiceName": "api",
-    "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
+	"exerciseCheckerZipsDirectory": "",
     "certificates": {
         "directory": ""
     },
