--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -58,11 +58,10 @@
          Если указана папка, отличная от корневой папки веб-проекта, содержимое подпапки Courses должно отдаваться веб-сервером по адресам /Courses/* -->
 		<add key="ulearn.coursesDirectory" value="" />
 
-		<!-- Должно быть true только для веб-приложения, которому необходимо иметь сгенерированные zip-архивы с упражнениями -->
-		<add key="ulearn.buildExerciseStudentZips" value="true" />
 		<!-- Папка со сгенерированными zip-архивами с упражнениями для выдачи пользователям (из них удалено всё лишнее).
          Генерируются при загрузке курса или по требованию. По умолчанию — подпапка ExerciseStudentZips папки ulearn.coursesDirectory -->
 		<add key="ulearn.exerciseStudentZipsDirectory" value="" />
+		<add key="ulearn.exerciseCheckerZipsDirectory" value="" />
 
 		<!-- Папка с шаблонами сертификатов. По умолчанию — папка Certificates в корне веб-проекта.
          Содержимое этой папки должно отдаваться веб-сервером по адресам /Certificates/* -->
