--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -11,6 +11,7 @@
     "statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
+	"exerciseCheckerZipsDirectory": "",
     "keysDirectory": "C:/ulearn/test_git_deploy_keys",
     "certificates": {
         "directory": ""
