ExerciseCheckerZipsCache not use in courseTool

--- a/src/CourseTool/appsettings.json
+++ b/src/CourseTool/appsettings.json
@@ -2,5 +2,6 @@
 	"runCheckerJob": {
 		"submissionsWorkingDirectory": "",
 		"deleteSubmissions": true
-	}
+	},
+	"exerciseCheckerZipsCacheDisabled": true
 }
