ULEARN-292 AntiPlagiarism WorkQueue

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -36,6 +36,7 @@
             "getAuthorPlagiarisms": {
                 "maxLastSubmissionsCount": 50
             }
-        }
+        },
+		"threadsCount": 2
     }
 }
