ULEARN-294 Not use SkbKontur.Passport.Client

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -45,6 +45,7 @@
 		<add key="owin.vk.appSecret" value="b1j1H7Yqbn2USgl6VYPt" />
 		<!-- Данные для авторизации через Контур.Паспорт -->
 		<add key="owin.konturPassport.clientId" value="ulearn-test" />
+		<!-- clientSecret больше не используется -->
 		<add key="owin.konturPassport.clientSecret" value="bz4F8ppejxEiqY6vmWkY" />
 
 		<add key="stepik.clientId" value="racHM9t6JDGNxsVU5AuDkQ5h61nddgpSjSqHzpWI" />
