--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -382,10 +382,6 @@
     <Reference Include="Serilog.Sinks.Log4Net, Version=1.5.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <HintPath>..\packages\Serilog.Sinks.Log4Net.1.5.16\lib\net45\Serilog.Sinks.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="SkbKontur.Passport.Client, Version=3.0.0.0, Culture=neutral, PublicKeyToken=null">
-      <HintPath>..\packages\SkbKontur.Passport.Client.3.0.1\lib\net452\SkbKontur.Passport.Client.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.0\lib\netstandard2.0\System.Buffers.dll</HintPath>
@@ -580,6 +576,8 @@
     <Compile Include="Kontur.Passport\KonturPassportAuthenticationHandler.cs" />
     <Compile Include="Kontur.Passport\KonturPassportAuthenticationMiddleware.cs" />
     <Compile Include="Kontur.Passport\KonturPassportAuthenticationOptions.cs" />
+    <Compile Include="Kontur.Passport\AuthenticationResult.cs" />
+    <Compile Include="Kontur.Passport\PassportClient.cs" />
     <Compile Include="Kontur.Passport\Provider\KonturPassportReturnEndpointContext.cs" />
     <Compile Include="Models\AcceptedSolutionsPageModel.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
