--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -579,6 +579,7 @@
     <Compile Include="Kontur.Passport\AuthenticationResult.cs" />
     <Compile Include="Kontur.Passport\PassportClient.cs" />
     <Compile Include="Kontur.Passport\Provider\KonturPassportReturnEndpointContext.cs" />
+    <Compile Include="Kontur.Passport\SigningKeysProvider.cs" />
     <Compile Include="Models\AcceptedSolutionsPageModel.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AnalyticsTablePageModel.cs" />
