--- a/src/GitCourseUpdater/GitCourseUpdater.csproj
+++ b/src/GitCourseUpdater/GitCourseUpdater.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
 		<NoWarn>NU1701;CS0168</NoWarn>
+		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 	</PropertyGroup>
 
 	<PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
