--- a/src/Stepik.Api/Stepik.Api.csproj
+++ b/src/Stepik.Api/Stepik.Api.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
+		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 	</PropertyGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Common\Common.csproj" />
