--- a/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
+++ b/src/AntiPlagiarism.Api/AntiPlagiarism.Api.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
+		<SatelliteResourceLanguages>en</SatelliteResourceLanguages>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
