--- a/src/XQueueWatcher/XQueueWatcher.csproj
+++ b/src/XQueueWatcher/XQueueWatcher.csproj
@@ -14,6 +14,7 @@
     <PackageLicenseUrl>https://ulearn.me/Home/Terms</PackageLicenseUrl>
     <PackageProjectUrl>https://ulearn.me</PackageProjectUrl>
     <PackageTags>ulearn education mooc xqueue</PackageTags>
+    <SatelliteResourceLanguages>en</SatelliteResourceLanguages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
