ULEARN-312 local statsdConnectionString empty

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -21,7 +21,7 @@
 	<connectionStrings>
 		<!-- ConnectionString для подключения к Graphite-relay в формате "address=graphite-relay.com;port=8125;prefixKey=ulearn.local". Можно оставить пустой, чтобы не отправлять метрики -->
 		<!-- В appsettings.json есть копия statsd, но для отправки метрики request.time через MetricsPipe настройка нужна именно здесь -->
-		<add name="statsd" connectionString="address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local" />
+		<add name="statsd" connectionString="" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
