--- a/src/Notifications/appsettings.json
+++ b/src/Notifications/appsettings.json
@@ -8,6 +8,6 @@
     },
     "graphiteServiceName": "notifications", 
     "keepAliveInterval": 10,
-    "statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
+    "statsdConnectionString": "",
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
