--- a/src/RunCsJob/appsettings.json
+++ b/src/RunCsJob/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"graphiteServiceName": "runcsjob",
-	"statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
+	"statsdConnectionString": "",
 	"submissionsUrl": "https://localhost:44300/",
 	"runnerToken": "F9388330-FF77-41B4-9011-1785F780C1CF",
 	"runCheckerJob": {
