--- a/src/XQueueWatcher/appsettings.json
+++ b/src/XQueueWatcher/appsettings.json
@@ -8,6 +8,6 @@
     }, 
     "keepAliveInterval": 10,
     "graphiteServiceName": "xqueuewatcher",
-    "statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
+    "statsdConnectionString": "",
     "database": "Data Source=K1707004;Initial Catalog=ulearn;Integrated Security=True"
 }
