--- a/src/uLearn.Web/appsettings.json
+++ b/src/uLearn.Web/appsettings.json
@@ -8,7 +8,7 @@
         }
     },
     "graphiteServiceName": "web",
-    "statsdConnectionString": "address=graphite-test;port=8125;transport=Tcp;prefixKey=ulearn.local",
+    "statsdConnectionString": "",
     "buildExerciseStudentZips": true,
     "exerciseStudentZipsDirectory": "",
 	"exerciseCheckerZipsDirectory": "",
