--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -2,100 +2,107 @@
   "name": "ulearn",
   "version": "0.1.0",
   "private": true,
+  "sideEffects": false,
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "analyze": "node scripts/build.js analyze",
     "courseToolBuild": "node scripts/courseToolBuild.js",
     "test": "jest",
     "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "dependencies": {
-    "@babel/core": "7.0.0",
-    "@babel/plugin-proposal-class-properties": "7.0.0",
-    "@babel/runtime": "7.0.0",
-    "@skbkontur/react-icons": "3.1.5",
-    "@skbkontur/react-ui": "^1.1.1",
-    "array-from": "2.1.1",
-    "autoprefixer": "9.1.5",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "24.5.0",
-    "babel-loader": "8.0.4",
-    "babel-preset-react-app": "5.0.3",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "@babel/core": "7.7.4",
+    "@sentry/browser": "5.10.1",
+    "@skbkontur/react-icons": "3.2.1",
+    "@skbkontur/react-ui": "1.6.5",
+    "autoprefixer": "9.7.2",
+    "babel-eslint": "10.0.3",
+    "babel-loader": "8.0.6",
+    "babel-preset-react-app": "9.0.2",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "chalk": "3.0.0",
     "classnames": "2.2.6",
-    "codemirror": "5.48.0",
-    "css-loader": "1.0.0",
+    "codemirror": "5.49.2",
+    "core-js": "3.4.7",
+    "css-loader": "3.2.0",
     "debounce": "1.2.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
-    "eslint": "5.6.1",
-    "eslint-config-react-app": "3.0.3",
-    "eslint-loader": "2.1.1",
-    "eslint-plugin-flowtype": "2.50.3",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.2",
-    "eslint-plugin-react": "7.11.1",
-    "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "2.0.0",
-    "file-saver": "2.0.0-rc.3",
-    "fs-extra": "7.0.0",
-    "jest": "24.5.0",
-    "katex": "0.11.0",
-    "object-assign": "4.1.1",
-    "outdated-browser-rework": "2.5.4",
-    "polyfill-array-includes": "1.0.0",
+    "dotenv": "8.2.0",
+    "dotenv-expand": "5.1.0",
+    "file-loader": "5.0.2",
+    "file-saver": "2.0.2",
+    "fs-extra": "8.1.0",
+    "jest": "24.9.0",
+    "katex": "0.11.1",
+    "outdated-browser-rework": "2.9.0",
     "postcss-flexbugs-fixes": "4.1.0",
-    "promise": "8.0.2",
-    "promise.prototype.finally": "3.1.0",
     "prop-types": "latest",
-    "query-string": "6.8.3",
-    "raf": "3.4.0",
-    "react": "16.8.3",
-    "react-bootstrap": "0.32.4",
-    "react-copy-to-clipboard": "5.0.1",
-    "react-dev-utils": "6.0.4",
-    "react-dom": "16.8.3",
+    "query-string": "5.1.1",
+    "raf": "3.4.1",
+    "react": "16.12.0",
+    "react-copy-to-clipboard": "5.0.2",
+    "react-dev-utils": "9.1.0",
+    "react-dom": "16.12.0",
     "react-helmet": "beta",
-    "react-redux": "5.0.7",
-    "react-responsive": "6.1.1",
-    "react-router-dom": "4.3.1",
-    "react-transition-group": "2.6.0",
-    "react-yandex-metrika": "2.4.2",
-    "redux": "4.0.0",
+    "react-redux": "7.1.3",
+    "react-responsive": "8.0.1",
+    "react-router-dom": "5.1.2",
+    "react-transition-group": "4.3.0",
+    "react-yandex-metrika": "2.6.0",
+    "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-thunk": "2.3.0",
-    "resolve": "1.8.1",
-    "style-loader": "0.23.0",
+    "style-loader": "1.0.1",
     "sw-precache-webpack-plugin": "0.11.5",
-    "url-loader": "1.1.1",
-    "url-polyfill": "1.1.0",
-    "webpack": "4.20.2",
-    "webpack-dev-server": "3.1.14",
-    "webpack-manifest-plugin": "2.0.4",
+    "url-loader": "3.0.0",
+    "webpack": "4.41.2",
+    "webpack-dev-server": "3.9.0",
+    "webpack-manifest-plugin": "2.2.0",
+    "webpack-merge": "4.2.2",
     "whatwg-fetch": "3.0.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "7.1.0",
-    "@storybook/addon-actions": "4.1.11",
-    "@storybook/addon-viewport": "4.1.11",
-    "@storybook/addons": "4.1.11",
-    "@storybook/react": "4.1.7",
+    "@babel/plugin-proposal-class-properties": "7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.7.4",
+    "@babel/plugin-transform-arrow-functions": "7.7.4",
+    "@babel/plugin-transform-modules-commonjs": "7.7.4",
+    "@babel/preset-env": "7.7.4",
+    "@babel/preset-react": "7.7.4",
+    "@storybook/addon-actions": "5.2.6",
+    "@storybook/addon-viewport": "5.2.6",
+    "@storybook/addons": "5.2.6",
+    "@storybook/react": "5.2.6",
+    "eslint": "6.7.1",
+    "eslint-config-react-app": "5.0.2",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-flowtype": "4.5.2",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.17.0",
+    "eslint-plugin-react-hooks": "2.3.0",
     "html-webpack-plugin": "next",
     "identity-obj-proxy": "3.0.0",
-    "less": "3.8.1",
-    "less-loader": "4.1.0",
-    "mini-css-extract-plugin": "0.4.3",
-    "moment": "2.22.2",
-    "moment-timezone": "0.5.23",
+    "less": "3.10.3",
+    "less-loader": "5.0.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "moment": "2.24.0",
+    "moment-timezone": "0.5.27",
     "postcss-loader": "3.0.0",
-    "prettier": "1.16.4",
-    "storybook-react-router": "^1.0.5",
-    "uglifyjs-webpack-plugin": "latest"
+    "prettier": "1.19.1",
+    "storybook-react-router": "1.0.8",
+    "terser-webpack-plugin": "2.2.1",
+    "uglifyjs-webpack-plugin": "latest",
+    "webpack-bundle-analyzer": "3.6.0"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "plugins": [
+      "react-hooks"
+    ],
+    "rules": {
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
+    }
   },
   "jest": {
     "moduleNameMapper": {
