--- a/src/Frontend/package.json
+++ b/src/Frontend/package.json
@@ -2,7 +2,9 @@
   "name": "ulearn",
   "version": "0.1.0",
   "private": true,
-  "sideEffects": false,
+  "sideEffects": [
+    "./src/externalComponentRenderer.js"
+  ],
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
