--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -173,6 +173,7 @@
 			<mimeMap fileExtension="odp" mimeType="application/vnd.oasis.opendocument.presentation" />
 			<mimeMap fileExtension="zip" mimeType="application/zip" />
 			<mimeMap fileExtension="mmap" mimeType="application/vnd.mindjet.mindmanage" />
+			<mimeMap fileExtension="xmind" mimeType="application/vnd.xmind.workbook" />
 		</staticContent>
 
 		<security>
