--- a/src/RunCheckerJob/appsettings.json
+++ b/src/RunCheckerJob/appsettings.json
@@ -9,7 +9,7 @@
 		"agentName": "",
 		"submissionsWorkingDirectory": "",
 		"deleteSubmissions": true,
-		"supportedLanguages": ["javascript"]
+		"supportedSandboxes": ["js-sandbox", "ml-sandbox", "netcore-sandbox"]
 	},
 	"keepAliveInterval": 20,
 	"telegram": {
