--- a/src/RunCsJob/appsettings.json
+++ b/src/RunCsJob/appsettings.json
@@ -9,7 +9,7 @@
 		"agentName": "",
 		"submissionsWorkingDirectory": "",
 		"deleteSubmissions": true,
-		"supportedLanguages": ["csharp"]
+		"supportedSandboxes": ["csharp"]
 	},
 	"keepAliveInterval": 20,
 	"telegram": {
