--- a/src/Notifications/appsettings.json
+++ b/src/Notifications/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "coursesDirectory": "../../../Courses",
+    "coursesDirectory": "../../../../Courses",
     "telegram": {
         "botToken": "293737221:AAGaAxFmEUjmiyixyy6VNPsaqc_G5ChSYOg",
         "errors": {
