--- a/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
+++ b/src/AntiPlagiarism.Web/AntiPlagiarism.Web.csproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
-		<PackageReference Include="Microsoft.AspNetCore.All" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
-		<PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
+		<PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
@@ -35,6 +36,7 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\AntiPlagiarism.Api\AntiPlagiarism.Api.csproj" />
+		<ProjectReference Include="..\Common.Api.Application\Common.Api.Application.csproj" />
 		<ProjectReference Include="..\Common.Api\Common.Api.csproj" />
 		<ProjectReference Include="..\Common\Common.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
