--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -2,20 +2,21 @@
 	<PropertyGroup>
 		<RootNamespace>Ulearn.Common</RootNamespace>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-		<TargetFrameworks>net472;netcoreapp2.2</TargetFrameworks>
+		<TargetFrameworks>net472;netcoreapp3.1</TargetFrameworks>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="DotNetZip" Version="1.13.4" />
 		<PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
 		<PackageReference Include="log4net" Version="2.0.8" />
 		<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.2.0" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.6" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
 		<PackageReference Include="NUnit" Version="3.10.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
-		<PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
+		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+		<PackageReference Include="System.Net.NameResolution" Version="4.3.0" />
 		<PackageReference Include="UnidecodeSharpCore" Version="2.0.1" />
 	</ItemGroup>
 	<ItemGroup>
