--- a/src/Web.Api/Web.Api.csproj
+++ b/src/Web.Api/Web.Api.csproj
@@ -1,27 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.2</TargetFramework>
+		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<NoWarn>NU1701;CS1573</NoWarn>
 		<RootNamespace>Ulearn.Web.Api</RootNamespace>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Community.AspNetCore.ExceptionHandling.Mvc" Version="2.0.3" />
+		<PackageReference Include="Community.AspNetCore.ExceptionHandling.Mvc" Version="2.2.0" />
 		<PackageReference Include="EntityFrameworkProfiler.Appender" Version="5.0.5039" />
 		<PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.2" />
-		<PackageReference Include="Microsoft.AspNetCore.All" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Xml" Version="2.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="2.2.0" />
-		<PackageReference Include="Serilog.AspNetCore" Version="3.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.2" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
+		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.2" />
+		<PackageReference Include="Serilog.AspNetCore" Version="3.2.0" />
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
 		<PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="4.5.5" />
-		<PackageReference Include="System.Collections.Immutable" Version="1.6.0" />
+		<PackageReference Include="System.Collections.Immutable" Version="1.7.0" />
 		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
 		<PackageReference Include="Vostok.Hosting.Core" Version="1.0.0-beta000029" />
 		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
@@ -31,13 +25,11 @@
 		<DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\Common.Api.Application\Common.Api.Application.csproj" />
 		<ProjectReference Include="..\Common.Api\Common.Api.csproj" />
 		<ProjectReference Include="..\Common\Common.csproj" />
 		<ProjectReference Include="..\Core\Core.csproj" />
 		<ProjectReference Include="..\Database.Core\Database.Core.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-		<Folder Include="Configuration" />
 	</ItemGroup>
 	<ItemGroup>
 		<Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -57,6 +49,16 @@
 		<Content Include="deploy\Web.Api.Task.xml">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
+		<Content Remove="Configuration\**" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Compile Remove="Configuration\**" />
+	</ItemGroup>
+	<ItemGroup>
+	  <EmbeddedResource Remove="Configuration\**" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Remove="Configuration\**" />
 	</ItemGroup>
 
 
