--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -14,13 +14,13 @@
   <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
   <package id="Graphite" version="1.3.0.0" targetFramework="net472" />
   <package id="Graphite.Elmah" version="1.0.3.0" targetFramework="net472" />
-  <package id="IdentityModel" version="3.10.10" targetFramework="net472" />
+  <package id="IdentityModel" version="4.1.1" targetFramework="net472" />
   <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="LtiLibrary.Core" version="1.6.2" targetFramework="net472" />
   <package id="LtiLibrary.Owin.Security.Lti" version="1.0.0-beta" targetFramework="net472" />
   <package id="MarkdownDeep.NET.Core" version="1.5.0.4" targetFramework="net472" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
@@ -33,21 +33,20 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authentication.Core" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Authorization" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Authorization" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Authorization.Policy" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.DataProtection" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.DataProtection.Extensions" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Hosting.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Hosting.Server.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http" version="2.2.2" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Extensions" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Http.Features" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.AspNetCore.Metadata" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Metadata" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.ResponseCaching.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Routing" version="2.2.2" targetFramework="net472" />
@@ -55,7 +54,7 @@
   <package id="Microsoft.AspNetCore.WebUtilities" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net472" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net472" />
   <package id="Microsoft.Build" version="16.4.0" targetFramework="net472" />
   <package id="Microsoft.Build.Framework" version="16.4.0" targetFramework="net472" />
@@ -65,22 +64,23 @@
   <package id="Microsoft.CodeAnalysis.CSharp" version="3.3.1" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.DotNet.PlatformAbstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Binder" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Configuration.Json" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.DependencyModel" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileProviders.Physical" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyModel" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Hosting.Abstractions" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.ObjectPool" version="2.2.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Options" version="3.0.0" targetFramework="net472" />
-  <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="3.1.2" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.2" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Logging" version="5.6.0" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net472" />
@@ -102,7 +102,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="Microsoft.Win32.Registry" version="4.6.0" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="NHunspell" version="1.2.5554.16953" targetFramework="net472" />
@@ -121,26 +121,26 @@
   <package id="Serilog" version="2.9.0" targetFramework="net472" />
   <package id="Serilog.Sinks.Log4Net" version="1.5.16" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Collections.Immutable" version="1.6.0" targetFramework="net472" />
-  <package id="System.ComponentModel.Annotations" version="4.6.0" targetFramework="net472" />
-  <package id="System.Data.SqlClient" version="4.7.0" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="4.6.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
-  <package id="System.IO.Pipelines" version="4.6.0" targetFramework="net472" />
+  <package id="System.IO.Pipelines" version="4.7.0" targetFramework="net472" />
   <package id="System.Management" version="4.6.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.AccessControl" version="4.6.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Xml" version="4.6.0" targetFramework="net472" />
-  <package id="System.Security.Permissions" version="4.6.0" targetFramework="net472" />
-  <package id="System.Security.Principal.Windows" version="4.6.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Xml" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="4.6.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net472" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Dataflow" version="4.10.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
