ApprovalTests last version

--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -2,13 +2,14 @@
 <packages>
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net472" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
-  <package id="ApprovalTests" version="4.2.2" targetFramework="net472" />
-  <package id="ApprovalUtilities" version="4.2.2" targetFramework="net472" />
+  <package id="ApprovalTests" version="4.5.2" targetFramework="net472" />
+  <package id="ApprovalUtilities" version="4.5.2" targetFramework="net472" />
   <package id="AspNetBundling" version="3.0.0" targetFramework="net472" />
   <package id="DotNetZip" version="1.13.4" targetFramework="net472" />
   <package id="Elmah.Contrib.WebApi" version="1.0.10.25" targetFramework="net472" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net472" />
   <package id="Elmah.Mvc" version="2.1.2" targetFramework="net472" />
+  <package id="EmptyFiles" version="0.11.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.3.0" targetFramework="net472" />
   <package id="EntityFramework.Functions" version="1.4.1" targetFramework="net472" />
   <package id="EPPlus" version="4.5.3.2" targetFramework="net472" />
@@ -127,7 +128,7 @@
   <package id="System.Drawing.Common" version="4.6.0" targetFramework="net472" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.6.0" targetFramework="net472" />
   <package id="System.IO.Pipelines" version="4.7.0" targetFramework="net472" />
-  <package id="System.Management" version="4.6.0" targetFramework="net472" />
+  <package id="System.Management" version="4.7.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
@@ -145,7 +146,7 @@
   <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Telegram.Bot" version="15.0.0" targetFramework="net472" />
-  <package id="TextCopy" version="1.7.1" targetFramework="net472" />
+  <package id="TextCopy" version="3.0.1" targetFramework="net472" />
   <package id="UnidecodeSharpCore" version="2.0.1" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
