Update Vostok. No errors on build

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -7,5 +7,6 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="Vostok" value="https://www.myget.org/F/vostok/api/v3/index.json" />
     <add key="Local nuget" value=".nuget" />
+    <add key="nuget.kontur" value="http://nuget.kontur/api/v2" />
   </packageSources>
 </configuration>
