--- a/src/Common.Api.Application/Common.Api.Application.csproj
+++ b/src/Common.Api.Application/Common.Api.Application.csproj
@@ -17,16 +17,17 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="5.0.2" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="5.2.1" />
-		<PackageReference Include="Vostok.Hosting" Version="1.0.0-beta000055" />
-		<PackageReference Include="Vostok.Instrumentation.AspNetCore" Version="1.0.0-beta000031" />
-		<PackageReference Include="Vostok.Logging.Serilog">
-			<Version>1.0.0-beta000014</Version>
-		</PackageReference>
+		<PackageReference Include="Vostok.Applications.AspNetCore" Version="0.1.10" />
+		<PackageReference Include="Vostok.Configuration" Version="0.1.14" />
+		<PackageReference Include="Vostok.Hosting" Version="0.1.8" />
+		<PackageReference Include="Vostok.Hosting.Kontur" Version="1.0.32" />
+		<PackageReference Include="Vostok.Logging.Serilog" Version="1.0.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Common.Api\Common.Api.csproj" />
 		<ProjectReference Include="..\Common\Common.csproj" />
+		<ProjectReference Include="..\Core\Core.csproj" />
 	</ItemGroup>
 
 	<!-- See https://docs.microsoft.com/ru-ru/aspnet/core/tutorials/getting-started-with-swashbuckle?view=aspnetcore-2.1&tabs=visual-studio%2Cvisual-studio-xml -->
