HerculesSink and fixes

--- a/src/AntiPlagiarism.Web/appsettings.json
+++ b/src/AntiPlagiarism.Web/appsettings.json
@@ -1,8 +1,9 @@
 {
     "port": 33333,
     "environment": "dev",
-    "airlock": {
-        "apiKey": "UniversalApiKey",
+    "hercules": {
+        "apiKey": "",
+        "stream": "",
         "host": "https://vostok.skbkontur.ru"
     },
     "hostLog": {
