--- a/src/Common.Api/Common.Api.csproj
+++ b/src/Common.Api/Common.Api.csproj
@@ -9,6 +9,8 @@
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.0" />
 	  <PackageReference Include="Serilog" Version="2.9.0" />
+	  <PackageReference Include="Vostok.Context" Version="0.1.3" />
+	  <PackageReference Include="Vostok.Tracing.Abstractions" Version="0.1.2" />
 	</ItemGroup>
 
 	<ItemGroup>
